--- a/src/components/ModalCreate/ModalCreate.module.scss
+++ b/src/components/ModalCreate/ModalCreate.module.scss
@@ -10,6 +10,7 @@
   flex-direction: column;
   gap: 20px;
   min-width: 600px;
+  z-index: 2;
   @media (max-width: 700px) {
     min-width: 350px;
   }
